--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ gradleversions = "0.44.0"
 hilt = "2.44.2"
 hiltAndroidX = "1.0.0"
 hiltCompose = "1.0.0"
+jacoco = "0.8.7"
 junit = "4.13.2"
 jvm = "1.7.20"
 kotest = "5.5.4"
