Github Actions - Ignore renovate branches

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,12 @@ name: Build
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches:
+      - 'master'
   pull_request:
-    branches: [ master ]
+    branches:
+      - 'master'
+      - '!renovate/**'
 
 concurrency:
   group: build-${{ github.ref }}
