--- a/detekt/config.yml
+++ b/detekt/config.yml
@@ -558,6 +558,8 @@ style:
       - '10'
       - '60'
       - '24'
+      - '50'
+      - '100'
       - '3600'
     ignoreHashCodeFunction: true
     ignorePropertyDeclaration: true
@@ -709,7 +711,7 @@ Compose:
   ContentEmitterReturningValues:
     active: true
   ModifierComposable:
-    active: true
+    active: false
   ModifierMissing:
     active: true
   ModifierReused:
@@ -729,7 +731,7 @@ Compose:
   RememberMissing:
     active: true
   UnstableCollections:
-    active: true
+    active: false
   ViewModelForwarding:
     active: true
   ViewModelInjection:
